Added delete line keybinding to helix

--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -32,6 +32,7 @@ render = "all"
 # Use system clipboard
 y = [":clipboard-yank", "yank"]
 p = [":clipboard-paste-before"]
+d = { d = ["extend_line_below", "delete_selection"] }
 
 [editor.statusline]
 left = ["mode", "spinner", "version-control"]
