Added open file picker in buffer directory keymap

--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -32,6 +32,7 @@ render = "all"
 # Use system clipboard
 y = [":clipboard-yank", "yank"]
 p = [":clipboard-paste-before"]
+F = [":file_picker_in_current_buffer_directory"]
 
 [editor.statusline]
 left = ["mode", "spinner", "version-control"]
