Updated bashrc for amazon linux and added file picker to helix config

--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -33,6 +33,7 @@ render = "all"
 y = [":clipboard-yank", "yank"]
 p = [":clipboard-paste-before"]
 F = ["file_picker_in_current_buffer_directory"]
+f = ["file_picker"]
 
 [editor.statusline]
 left = ["mode", "spinner", "version-control"]
