--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -87,3 +87,8 @@ auto-format = false
 name = "yaml"
 formatter = { command = 'prettier', args = ["--parser", "yaml"] }
 auto-format = false
+
+[[language]]
+name = "c-sharp"
+formatter = { command = "omnisharp" }
+auto-format = true
