Helix fixed JDTLS to work with out SDKman, removed SDKman from bashrc

--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -43,3 +43,7 @@ separator = "│"
 mode.normal = "N"
 mode.insert = "I"
 mode.select = "S"
+
+[editor.lsp]
+display-messages = true
+display-inlay-hints = true
