--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -9,7 +9,9 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,auto
+#monitor=,preferred,auto,auto
+monitor=DP-1, 3440x1440@165, 0x0, 1
+monitor=HDMI-A-1, 1920x1080@60, 1080x1440, 1.5
 
 
 ###################
@@ -34,7 +36,7 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & firefox
+exec-once = waybar & hyprpaper & copyq --start-server & dunst
 
 
 #############################
