updated hyprland to use hdr for KTC ultrawide monitor

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -10,8 +10,8 @@
 
 # See https://wiki.hypr.land/Configuring/Monitors/
 #monitor=,preferred,auto,auto
-monitor=DP-1, 3440x1440@165, 0x0, 1
-monitor=HDMI-A-1, 1920x1080@60, 1080x1440, 1.5
+monitor = DP-1, 3440x1440@165, 0x0, 1, bitdepth, 10, cm, hdr, sdrsaturation, 1.05, sdrbrightness, 1.2
+monitor=HDMI-A-1, 1920x1080@60, 1080x1440, 1.5, cm, srgb
 
 
 ###################
@@ -36,7 +36,7 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & copyq --start-server & dunst
+exec-once = waybar & hyprpaper & copyq --start-server & dunst & gammastep -O 6500 -m DP-1
 
 
 #############################
@@ -177,7 +177,6 @@ misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
-
 
 #############
 ### INPUT ###
