updating hyprland, kitty, and waybar configs

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -36,7 +36,7 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & copyq --start-server & dunst & gammastep -O 6500 -m DP-1
+exec-once = waybar & ~/.config/hypr/scripts/dynamic-wallpaper.sh 60 & copyq --start-server & dunst & gammastep -O 6500 -m DP-1
 
 
 #############################
