--- a/config/kitty/kitty/kitty.conf
+++ b/config/kitty/kitty/kitty.conf
@@ -1,11 +1,11 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 # Font settings
-font_family      JetBrainsMono Nerd Font
+font_family      Geist Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-font_size 10.0
+font_size 19.0
 adjust_line_height 120%
 font_features none
 
