--- a/config/kitty/kitty/kitty/kitty-coding.conf
+++ b/config/kitty/kitty/kitty/kitty-coding.conf
@@ -1,11 +1,11 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 # Font settings
-font_family      Geist Mono
+font_family      DankMono Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-font_size 10.0
+font_size 19.0
 adjust_line_height 120%
 font_features none
 
@@ -13,8 +13,7 @@ font_features none
 cursor_blink_interval 0
 
 # Window
-#hide_window_decorations titlebar-only
-titlebar-only
+hide_window_decorations titlebar-only
 
 # Misc
 macos_option_as_alt yes
