--- a/config/kitty/kitty/kitty/kitty.conf
+++ b/config/kitty/kitty/kitty/kitty.conf
@@ -1,7 +1,7 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 # Font settings
-font_family      Geist Mono
+font_family      JetBrainsMono Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -13,8 +13,7 @@ font_features none
 cursor_blink_interval 0
 
 # Window
-#hide_window_decorations titlebar-only
-titlebar-only
+hide_window_decorations titlebar-only
 
 # Misc
 macos_option_as_alt yes
