--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -7,41 +7,40 @@
         "memory",
         "temperature",
         "battery",
-        "backlight",
-        "pulseaudio",
-        "network",
+        "backlight"
     ],
     "modules-center": [
-        "river/window"
+        "clock"
     ],
     "modules-right": [
-        "river/tags",
-        "clock",
+        "pulseaudio",
+        "network",
         "bluetooth",
         "custom/power"
     ],
     "custom/launcher": {
         "format": "",
         "on-click": "fuzzel --show drun",
-        "tooltip": false,
+        "tooltip": false
     },
     "cpu": {
-        "format": " {usage}%",
+        "format": " {usage}%"
     },
     "memory": {
         "interval": 3,
-        "format": " {used}G",
+        "format": " {used}G"
     },
     "temperature": {
         "critical-threshold": 65,
         "format": " {temperatureC}°C",
         "tooltip": false,
+        "hwmon-path": "/sys/class/hwmon/hwmon4/temp1_input"
     },
     "battery": {
         "states": {
             "good": 85,
             "medium": 65,
-            "low": 30,
+            "low": 30
         },
         "format": "{icon} {capacity}%",
         "format-charging": " {capacity}%",
@@ -59,20 +58,20 @@
             "󰂂",
             "󰁹"
         ],
-        "tooltip-format": "Power Draw: {power}W\nRemaining time: {time}\nHealth: {health}",
+        "tooltip-format": "Power Draw: {power}W\nRemaining time: {time}\nHealth: {health}"
     },
     "backlight": {
         "format": "󰃠 {}%",
         "on-scroll-up": "brightnessctl s 1%-",
         "on-scroll-down": "brightnessctl s +1%",
-        "tooltip": false,
+        "tooltip": false
     },
     "pulseaudio": {
         "format": "{icon} {volume}%",
         "format-bluetooth": "󰂰 {volume}%",
         "format-muted": "󰝟 0%",
         "states": {
-            "muted": 0,
+            "muted": 0
         },
         "on-click": "pactl set-sink-mute @DEFAULT_SINK@ toggle",
         "format-icons": {
@@ -80,14 +79,8 @@
                 "",
                 "󰕾",
                 ""
-            ],
-        },
-    },
-    "river/window": {
-        "max-length": 30,
-    },
-    "river/tags": {
-        "num-tags": 6,
+            ]
+        }
     },
     "clock": {
         "format": " {:%I:%M %p %b, %d %a}",
@@ -104,20 +97,21 @@
                 "days": "<span color='#ecc6d9'><b>{}</b></span>",
                 "weeks": "<span color='#99ffdd'><b>W{}</b></span>",
                 "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
-                "today": "<span color='#ff6699'><b><u>{}</u></b></span>",
-            },
+                "today": "<span color='#ff6699'><b><u>{}</u></b></span>"
+            }
         },
         "actions": {
-            "on-click": "mode",
-        },
+            "on-click": "mode"
+        }
     },
     "network": {
-        "interface": "wlo1",
         "interval": 3,
-        "format": "󰖩 {essid}",
-        "format-disconnected": "",
-        "max-length": 15,
-        "tooltip-format": "Name: {essid}\nSignal: {signaldBm}dBm | {signalStrength}%\nIP: {ipaddr}\nFrequency: {frequency}GHz\nSpeed:  {bandwidthDownBytes}   {bandwidthUpBytes}",
+        "format": "󰈀  {ifname}",
+        "format-wifi": "󰖩  {essid}",
+        "format-ethernet": "󰈀  {ifname}",
+        "format-disconnected": "󰖪",
+        "max-length": 20,
+        "tooltip-format": "Name: {essid}\nSignal: {signaldBm}dBm | {signalStrength}%\nIP: {ipaddr}\nFrequency: {frequency}GHz\nSpeed:  {bandwidthDownBytes}   {bandwidthUpBytes}"
     },
     "bluetooth": {
         "format": " {status}",
@@ -131,11 +125,11 @@
         "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
         "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%",
         "max-length": 10,
-        "on-click": "bash ~/.config/river/scripts/toggle_bluetooth",
+        "on-click": "bash ~/.config/waybar/scripts/bluetooth_menu"
     },
     "custom/power": {
         "format": "󰐥",
         "tooltip": false,
-        "on-click": "bash ~/.config/river/scripts/power_menu",
-    },
+        "on-click": "bash ~/.config/waybar/scripts/power_menu"
+    }
 }
