--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 # Font settings
-font_family      Geist Mono
+font_family      FiraCode Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -11,6 +11,11 @@ font_features none
 
 # Cursor
 cursor_blink_interval 0
+
+# Tabs
+tab_bar_edge top
+tab_bar_style powerline
+tab_powerline_style slanted
 
 # Window
 #hide_window_decorations titlebar-only
