fixing font issue again

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -21,8 +21,7 @@ monitor=HDMI-A-1, 1920x1080@60, 1080x1440, 1.5, cm, srgb
 # See https://wiki.hypr.land/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = wezterm
-#$terminal = kitty
+$terminal = kitty
 $fileManager = dolphin
 $menu = wofi --show drun
 
@@ -298,4 +297,3 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-bind = SUPER, Return, exec, wezterm
