updated dynamic wallpaper

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -35,7 +35,9 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & ~/.config/hypr/scripts/dynamic-wallpaper.sh 60 & copyq --start-server & dunst & gammastep -O 6500 -m DP-1
+exec-once = waybar & swww-daemon & copyq --start-server & dunst & gammastep -O 6500 -m DP-1
+# Dynamic wallpaper script
+exec-once = sleep 2 && ~/.config/hypr/scripts/dynamic-wallpaper.sh
 
 
 #############################
