--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -36,8 +36,7 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = waybar & swww-daemon & copyq --start-server & dunst & gammastep -O 6500 -m DP-1
-# Dynamic wallpaper script
-exec-once = sleep 2 && ~/.config/hypr/scripts/dynamic-wallpaper.sh
+exec-once = ~/.config/hypr/workspace-wallpapers.sh
 
 
 #############################
